--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: sans-serif;
 }
 h1 {font-family: sans-serif;}
-h3 {align-content: center;}
+h1 {align-items: center;}
 div.main {
   max-width: 700px;
   margin: 0 auto;
